--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,135 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.4.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.kumaran.commons</groupId>
-	<artifactId>microservices-base</artifactId>
+	<groupId>com.kumaran.microservices</groupId>
+	<artifactId>microservices-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>microservices-base</name>
-	<description>A Spring boot base project - that will be used as parent for other spring boot apps.</description>
+	<name>microservices-demo</name>
+	<description>A Spring boot microservices demo project - with all other microservices as modules.</description>
 	<packaging>pom</packaging>
+
+	<modules>
+		<module>twitter-to-kafka-service</module>
+		<module>app-config-data</module>
+		<module>kafka</module>
+		<module>kafka/kafka-model</module>
+		<module>kafka/kafka-admin</module>
+		<module>kafka/kafka-producer</module>
+		<module>common-config</module>
+	</modules>
 	<properties>
 		<java.version>11</java.version>
 		<spring-boot.version>2.4.5</spring-boot.version>
+		<spring-kafka.version>2.7.0</spring-kafka.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<java.version>11</java.version>
+		<twitter4j.version>4.0.7</twitter4j.version>
+		<lombok.version>1.18.20</lombok.version>
+		<avro.version>1.10.2</avro.version>
+		<spring-retry.version>1.3.1</spring-retry.version>
+		<spring-aop.version>2.4.5</spring-aop.version>
+		<kafka-avro-serializer.version>5.5.1</kafka-avro-serializer.version>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>confluent</id>
+			<url>https://packages.confluent.io/maven/</url>
+		</repository>
+	</repositories>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>com.kumaran.microservices</groupId>
+				<artifactId>app-config-data</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.kumaran.microservices</groupId>
+				<artifactId>common-config</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.kumaran.microservices</groupId>
+				<artifactId>kafka-model</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.kumaran.microservices</groupId>
+				<artifactId>kafka-admin</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.kumaran.microservices</groupId>
+				<artifactId>kafka-producer</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
 				<version>${spring-boot.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-webflux</artifactId>
+				<version>${spring-boot.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.twitter4j</groupId>
+				<artifactId>twitter4j-stream</artifactId>
+				<version>${twitter4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.avro</groupId>
+				<artifactId>avro</artifactId>
+				<version>${avro.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.confluent</groupId>
+				<artifactId>kafka-avro-serializer</artifactId>
+				<version>${kafka-avro-serializer.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>${spring-kafka.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.retry</groupId>
+				<artifactId>spring-retry</artifactId>
+				<version>${spring-retry.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-aop</artifactId>
+				<version>${spring-aop.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${aspectj.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
