--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,14 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>twitter-to-kafka-service</module>
         <module>app-config-data</module>
         <module>kafka</module>
         <module>kafka/kafka-model</module>
         <module>kafka/kafka-admin</module>
         <module>kafka/kafka-producer</module>
+        <module>twitter-to-kafka-service</module>
         <module>common-config</module>
+        <module>config-server</module>
     </modules>
     <properties>
         <java.version>11</java.version>
@@ -34,6 +35,8 @@
         <avro.version>1.10.2</avro.version>
         <spring-retry.version>1.3.1</spring-retry.version>
         <spring-aop.version>2.4.5</spring-aop.version>
+        <spring-cloud.version>3.0.2</spring-cloud.version>
+        <spring-cloud-dependencies.version>2020.0.2</spring-cloud-dependencies.version>
         <kafka-avro-serializer.version>5.5.1</kafka-avro-serializer.version>
     </properties>
 
@@ -84,6 +87,12 @@
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-webflux</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
@@ -128,6 +137,32 @@
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectj.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-config-server</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-config</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-bootstrap</artifactId>
+                <version>3.0.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <dependency>
